--- a/SGBD/access.css
+++ b/SGBD/access.css
@@ -40,6 +40,10 @@
     border-radius: 35px;
 }
 
+#microsoft:hover {
+    box-shadow: 5px 5px 25px black;
+}
+
 #titletabela {
     display: flex;
     justify-content: center;
@@ -57,6 +61,7 @@ table {
     border-collapse: collapse;
     width: 60%;
     font-family: 'Roboto', sans-serif;
+    box-shadow: 5px 5px 15px black;
 }
 
 th, td {
@@ -95,11 +100,13 @@ ul {
 }
 
 #img2 {
-    width: 650px
+    width: 650px;
+    box-shadow: 5px 5px 10px black;
 }
 
 #img2:hover {
     width: 1000px;
+    box-shadow: 10px 10px 25px black;
 }
 
 #print {
@@ -107,4 +114,14 @@ ul {
     justify-content: center;
     font-size: 1.5em;
     font-family: 'Lato', sans-serif;
+}
+
+#divfooter {
+    display: flex;
+    justify-content: center;
+}
+
+#divfooter2 {
+    display: flex;
+    justify-content: center;
 }
