Seção Firebird finalizada

--- a/SGBD/firebird.css
+++ b/SGBD/firebird.css
@@ -87,13 +87,13 @@ ul {
     padding-left: 25px;
 }
 
-.linkmdb {
+.firebird {
     text-decoration: none;
-    color: black;
+    color: black
 }
 
-.linkmdb:hover {
-    color: #0677B8;
+.firebird:hover {
+    color: white
 }
 
 /* Fim Tabela */
