Comentários e Finalização das seções

--- a/SGBD/access.css
+++ b/SGBD/access.css
@@ -7,6 +7,8 @@
     box-sizing: border-box;
 }
 
+/* Título */
+
 #divtitle {
     display:flex;
     justify-content: center;
@@ -33,6 +35,9 @@
     transition: width 0.5s ease-in-out;
 }
 
+/* FIM Título */
+
+/* Imagem topo */
 
 #microsoft {
     margin: 5vh;
@@ -44,11 +49,17 @@
     box-shadow: 5px 5px 25px black;
 }
 
+/* FIM Imagem topo */
+
+/* Título tabela */
+
 #titletabela {
     display: flex;
     justify-content: center;
     font-family: 'Lato', sans-serif;
 }
+
+/* FIM Título tabela */
 
 /* Tabela */
 
@@ -94,6 +105,8 @@ ul {
 
 /* Fim Tabela */
 
+/* Print tela */
+
 #img1 {
     display: flex;
     justify-content: center;
@@ -116,6 +129,10 @@ ul {
     font-family: 'Lato', sans-serif;
 }
 
+/* FIM print tela */
+
+/* Tutorial voltar */
+
 #divfooter {
     display: flex;
     justify-content: center;
@@ -125,3 +142,5 @@ ul {
     display: flex;
     justify-content: center;
 }
+
+/* FIM Tutorial voltar */
