--- a/SGBD/firebird.css
+++ b/SGBD/firebird.css
@@ -7,6 +7,8 @@
     box-sizing: border-box;
 }
 
+/* Título */
+
 #divtitle {
     display:flex;
     justify-content: center;
@@ -33,17 +35,26 @@
     transition: width 0.5s ease-in-out;
 }
 
+/* FIM Título */
+
+/* Imagem topo */
 
 #firebird {
     width: 350px;
     border-radius: 35px;
 }
 
+/* FIM Imagem topo */
+
+/* Título tabela */
+
 #titletabela {
     display: flex;
     justify-content: center;
     font-family: 'Lato', sans-serif;
 }
+
+/* FIM Título tabela */
 
 /* Tabela */
 
@@ -98,6 +109,8 @@ ul {
 
 /* Fim Tabela */
 
+/* Print tela */
+
 #img1 {
     display: flex;
     justify-content: center;
@@ -120,6 +133,10 @@ ul {
     font-family: 'Lato', sans-serif;
 }
 
+/* FIM print tela */
+
+/* Tutorial voltar */
+
 #divfooter {
     display: flex;
     justify-content: center;
@@ -129,3 +146,5 @@ ul {
     display: flex;
     justify-content: center;
 }
+
+/* FIM Tutorial voltar */
